# SkyOps

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src/skyops/: __init__.py  api.py  config.py  lock.py  main.py  ssh_config.py  ui.py  userdata.py  version_check.py
src/skyops/templates/: default-userdata.sh
tests/: test_api.py  test_api_extended.py  test_config.py  test_lock.py  test_main.py  test_main_extended.py  test_ssh_config.py  test_ui.py  test_userdata.py  test_version_check.py
tests/e2e/: test_lifecycle.sh
